Remove test files

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,15 +32,10 @@
                         <div class="form-group">
                             <label for="model">TTS Model:</label>
                             <select id="model" name="model">
+                                <option value="tts_models/multilingual/bark">🐶 Bark (MIT License - Emotional Tags)
+                                </option>
                                 <option value="tts_models/multilingual/openvoice">🎤 OpenVoice (MIT License - Voice
                                     Cloning)</option>
-                                <option value="tts_models/en/ljspeech/tacotron2-DDC">LJSpeech Tacotron2</option>
-                                <option value="tts_models/multilingual/multi-dataset/xtts_v2">XTTS v2 (Voice Cloning)
-                                </option>
-                                <option value="tts_models/multilingual/multi-dataset/your_tts">YourTTS (Multilingual)
-                                </option>
-                                <option value="tts_models/en/vctk/vits">VCTK VITS</option>
-                                <option value="tts_models/en/sam/tacotron-DDC">SAM Tacotron</option>
                             </select>
                         </div>
 
